@@ -3,6 +3,7 @@
 - Changed label prefix from @ to a more convenient #.
 - Fixed track skipping with ices.
 - New CLI command: ardj skip.
+- Monitor now checks children every 1 second, not 5.
 
 2014/06/19 (1.2.15)
 - New command: ardj jabber probe.
